feature(admin-fe): 完成navTop navSide

--- a/src/component/layout/theme.css
+++ b/src/component/layout/theme.css
@@ -399,14 +399,19 @@ footer p {
 }
 
 .navbar-brand b {
+  margin-right: 5px;
   color: #2DAFCB;
 }
 
 .top-navbar .nav > li {
   position: relative;
   display: inline-block;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0 10px;
+}
+
+.top-navbar .nav > li:hover .dropdown-menu {
+  display: block;
 }
 
 .top-navbar .nav > li > a {
@@ -425,7 +430,12 @@ footer p {
 
 .top-navbar .dropdown-menu {
   min-width: 230px;
+  top: 98%;
   border-radius: 0 0 4px 4px;
+}
+
+.dropdown-menu > li > a {
+  cursor: pointer;
 }
 
 .top-navbar .dropdown-menu > li > a:hover, .top-navbar .dropdown-menu > li > a:focus {
@@ -532,6 +542,11 @@ ul.nav.nav-second-level.collapse.in {
 
 .top-navbar .nav > li > a > i {
   margin-right: 2px;
+}
+
+.top-navbar .nav > li > a > span {
+  color: #666;
+  margin-right: 5px;
 }
 
 .top-navbar .navbar-brand:hover {
