--- a/src/component/layout/theme.css
+++ b/src/component/layout/theme.css
@@ -49,7 +49,6 @@ h4 {
 p {
   font-size: 16px;
   line-height: 25px;
-  padding-top: 20px;
 }
 
 .panel {
@@ -158,7 +157,7 @@ p {
 }
 
 .panel-heading {
-  padding: 15px 15px 0px;
+  padding: 15px 15px 0;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -229,7 +228,7 @@ p {
 .back-footer-red {
   background-color: #F0433D;
   color: #fff;
-  border-top: 0px solid #fff;
+  border-top: 0 solid #fff;
 }
 
 .icon-box-right {
@@ -260,9 +259,9 @@ p {
   padding: 20px;
   font-size: 20px;
   font-weight: 500;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
   background-color: #2EA7EB;
   color: #fff;
 }
@@ -295,7 +294,7 @@ p {
 }
 
 .placeholder h2 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .donut {
@@ -383,7 +382,7 @@ footer p {
 }
 
 .top-navbar {
-  margin: 0px;
+  margin: 0;
 }
 
 .top-navbar .navbar-brand {
@@ -419,7 +418,7 @@ footer p {
   display: block;
   padding: 20px;
   color: #FFFFFF;
-  margin: 0px;
+  margin: 0;
 }
 
 .top-navbar .nav > li > a:hover, .top-navbar .nav > li > a:focus {
@@ -452,11 +451,11 @@ footer p {
   margin-bottom: 8px;
   overflow: hidden;
   background-color: #f5f5f5;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 .dropdown-tasks > li > a {
-  padding: 0px 15px;
+  padding: 0 15px;
 }
 
 .dropdown-tasks p {
@@ -559,7 +558,7 @@ ul.nav.nav-second-level.collapse.in {
 }
 
 .navbar-default {
-  border: 0px solid black;
+  border: 0 solid black;
 }
 
 .navbar-header {
